log
Tue 23 Apr 2024 06:41:47 PM UTC: 
 tests:  0|6
total_score: 0/70
553308e
Tue 23 Apr 2024 07:38:41 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|6
total_score: 0/70
d222cbc
Tue 23 Apr 2024 07:39:45 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c:57:1: error: expected identifier or ‘(’ before ‘}’ token
   57 | }
      | ^
Compilation failed
eb3a67c
Tue 23 Apr 2024 07:39:57 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|6
total_score: 0/70
852d496
Tue 23 Apr 2024 07:42:03 PM UTC: 
 hashmap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  0|6
total_score: 0/70
96852bb
Tue 23 Apr 2024 07:42:33 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
67e331d
Tue 23 Apr 2024 07:45:55 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|4
total_score: 30/70
03e9d48
Thu 25 Apr 2024 06:40:37 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
111bbac
Thu 25 Apr 2024 06:41:47 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
test.c: In function ‘enlarge’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6575839
Thu 25 Apr 2024 06:43:06 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
0d0ac8f
Thu 25 Apr 2024 06:43:24 PM UTC: 
 hashmap.c | 18 ------------------
 1 file changed, 18 deletions(-)
 tests:  5|4
total_score: 30/70
56c663d
Thu 25 Apr 2024 06:44:49 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|4
total_score: 30/70
d0f5ed4
Thu 25 Apr 2024 06:45:02 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|4
total_score: 30/70
224cfd3
Thu 25 Apr 2024 06:46:19 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1b6825a
Thu 25 Apr 2024 06:46:37 PM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:78:32: error: ‘value’ undeclared (first use in this function)
   78 |   if(map==NULL || key==NULL || value==NULL) return;
      |                                ^~~~~
hashmap.c:78:32: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:78:45: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   78 |   if(map==NULL || key==NULL || value==NULL) return;
      |                                             ^~~~~~
hashmap.c:77:8: note: declared here
   77 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b38dcab
Thu 25 Apr 2024 06:46:47 PM UTC: 
 hashmap.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  5|4
total_score: 30/70
b198af2
Thu 25 Apr 2024 06:53:14 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1e54a7e
Thu 25 Apr 2024 06:55:35 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
1845e67
Thu 25 Apr 2024 06:56:39 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 40/70
852f9df
Thu 25 Apr 2024 07:00:19 PM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
6395de7
Sat 27 Apr 2024 04:57:24 AM UTC: 
 hashmap.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
 tests:  9|3
total_score: 40/70
29767c3
